POC_OPA/backup_assets/httpbin-ui/httpbin-ui-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: httpbin-ui-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - httpbin-ui.example.com
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin-ui
spec:
  hosts:
  - httpbin-ui.example.com
  gateways:
  - httpbin-ui-gateway
  http:
  - route:
    - destination:
        host: httpbin-ui
        port:
          number: 3000
